000694  2024-12-01    Gide — Voyage au Congo

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -125,6 +125,7 @@
       <ant target='@{target}' dir='gide/isabelle'/>
       <ant target='@{target}' dir='gide/retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/souvenirs_de_la_cour_d_assises'/>
+      <ant target='@{target}' dir='gide/voyage_au_congo'/>
       <ant target='@{target}' dir='gilbert_de_voisins/ecrit_en_chine'/>
       <ant target='@{target}' dir='gilbert_de_voisins/la_petite_angoisse'/>
       <ant target='@{target}' dir='gilbert_de_voisins/les_jardins_le_faune_et_le_poete'/>
