--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -187,6 +187,7 @@
       <ant target='@{target}' dir='mille/christine_et_lui'/>
       <ant target='@{target}' dir='miomandre/ecrit_sur_de_l_eau'/>
       <ant target='@{target}' dir='mirbeau/la_greve_des_electeurs'/>
+      <ant target='@{target}' dir='mirbeau/prelude'/>
       <ant target='@{target}' dir='moselly/jean_des_brebis'/>
       <ant target='@{target}' dir='moselly/terres_lorraines'/>
       <ant target='@{target}' dir='muller/mon_dernier_combat'/>
