000700  2025-02-14    Lefebvre — Quatre-vingt-neuf

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -157,6 +157,7 @@
       <ant target='@{target}' dir='laforgue/les_complaintes'/>
       <ant target='@{target}' dir='laforgue/feuilles'/>
       <ant target='@{target}' dir='lautreamont/les_chants_de_maldoror'/>
+      <ant target='@{target}' dir='lefebvre/quatre-vingt-neuf'/>
       <ant target='@{target}' dir='lessig/free_culture'/>
       <ant target='@{target}' dir='leyret/en_plein_faubourg'/>
       <ant target='@{target}' dir='lintier/le_tube_1233'/>
