--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -228,6 +228,7 @@
       <ant target='@{target}' dir='roussel/la_vue'/>
       <ant target='@{target}' dir='roussel/locus_solus'/>
       <ant target='@{target}' dir='roussel/nouvelles_impressions_d_afrique'/>
+      <ant target='@{target}' dir='sauvy/croissance_zero'/>
       <ant target='@{target}' dir='savignon/filles_de_la_pluie'/>
       <ant target='@{target}' dir='savorgnan_de_brazza/expedition'/>
       <ant target='@{target}' dir='savorgnan_de_brazza/expose'/>
