--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -108,6 +108,7 @@
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
       <ant target='@{target}' dir='descaves/sous-offs'/>
       <ant target='@{target}' dir='duprat/histoire_de_l_imprimerie_imperiale'/>
+      <ant target='@{target}' dir='dyssord/les_des_sont_jetes'/>
       <ant target='@{target}' dir='elbel/pour_une_paix_veritable'/>
       <ant target='@{target}' dir='elder/le_peuple_de_la_mer'/>
       <ant target='@{target}' dir='estaunie/l_epave'/>
