--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -87,6 +87,7 @@
       <ant target='@{target}' dir='boutmy/dictionnaire_de_l_argot_des_typographes'/>
       <ant target='@{target}' dir='breton/physiologie_du_correcteur_d_imprimerie'/>
       <ant target='@{target}' dir='buchon/scenes_franc_comtoises'/>
+      <ant target='@{target}' dir='camara/spiral_of_violence'/>
       <ant target='@{target}' dir='carco-mac_orlan/les_mysteres_de_la_morgue'/>
       <ant target='@{target}' dir='chamfort/oeuvres_completes_auguis'/>
       <ant target='@{target}' dir='champsaur/dinah_samuel'/>
