--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -135,6 +135,7 @@
       <ant target='@{target}' dir='gobineau/les_pleiades'/>
       <ant target='@{target}' dir='goldman/anarchism_and_other_essays'/>
       <ant target='@{target}' dir='gorz/ecologie_et_politique'/>
+      <ant target='@{target}' dir='gorz/ecologie_et_liberte'/>
       <ant target='@{target}' dir='holbach/theologie_portative'/>
       <ant target='@{target}' dir='huysmans/a_vau_l_eau'/>
       <ant target='@{target}' dir='huysmans/en_menage'/>
