000706 Rosenthal, Munson — President Kissinger 000707 Gorz — Misères du présent, richesse du possible

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -136,6 +136,7 @@
       <ant target='@{target}' dir='goldman/anarchism_and_other_essays'/>
       <ant target='@{target}' dir='gorz/ecologie_et_politique'/>
       <ant target='@{target}' dir='gorz/ecologie_et_liberte'/>
+      <ant target='@{target}' dir='gorz/misere_du_present_richesse_du_possible'/>
       <ant target='@{target}' dir='holbach/theologie_portative'/>
       <ant target='@{target}' dir='huysmans/a_vau_l_eau'/>
       <ant target='@{target}' dir='huysmans/en_menage'/>
@@ -224,6 +225,7 @@
       <ant target='@{target}' dir='renard/l_ecornifleur'/>
       <ant target='@{target}' dir='robert/papa'/>
       <ant target='@{target}' dir='rolland/au_dessus_de_la_melee'/>
+      <ant target='@{target}' dir='rosenthal_munson/president_kissinger'/>
       <ant target='@{target}' dir='rostand/cyrano_de_bergerac'/>
       <ant target='@{target}' dir='roupnel/le_vieux_garain'/>
       <ant target='@{target}' dir='roussel/chiquenaude'/>
