000708 Jean — Parmi les hommes

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -143,7 +143,6 @@
       <ant target='@{target}' dir='huysmans/en_rade'/>
       <ant target='@{target}' dir='huysmans/marthe'/>
       <ant target='@{target}' dir='huysmans/un_dilemne'/>
-      <ant target='@{target}' dir='janin/un_hiver_a_paris'/>
       <ant target='@{target}' dir='jaloux/au_dessus_de_la_ville'/>
       <ant target='@{target}' dir='jaloux/l_alcyone'/>
       <ant target='@{target}' dir='jaloux/la_constellation'/>
@@ -151,7 +150,9 @@
       <ant target='@{target}' dir='jaloux/le_reste_est_silence'/>
       <ant target='@{target}' dir='jaloux/les_figures_de_cire'/>
       <ant target='@{target}' dir='jaloux/o_toi_que_j_eusse_aimee'/>
+      <ant target='@{target}' dir='janin/un_hiver_a_paris'/>
       <ant target='@{target}' dir='jarrett/perspectives_on_conservation'/>
+      <ant target='@{target}' dir='jean/parmi_les_hommes'/>
       <ant target='@{target}' dir='journet/l_ere_de_la_femme'/>
       <ant target='@{target}' dir='kapp/the_social_costs_of_business_enterprise'/>
       <ant target='@{target}' dir='kock/l_enfant_de_ma_femme'/>
