000710  2025-07-14    Girodias — Une journée sur la terre / Les jardins d’Éros

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -132,6 +132,8 @@
       <ant target='@{target}' dir='gilbert_de_voisins/la_petite_angoisse'/>
       <ant target='@{target}' dir='gilbert_de_voisins/les_jardins_le_faune_et_le_poete'/>
       <ant target='@{target}' dir='gilbert_de_voisins/les_moments_perdus_de_john_shag'/>
+      <ant target='@{target}' dir='girodias/une_journee_sur_la_terre'/>
+      <ant target='@{target}' dir='girodias/l_affaire_kissinger'/>
       <ant target='@{target}' dir='gobineau/les_pleiades'/>
       <ant target='@{target}' dir='goldman/anarchism_and_other_essays'/>
       <ant target='@{target}' dir='gorz/ecologie_et_politique'/>
