--- a/livres.publies/graffigny/lettres_d_une_peruvienne/build.xml
+++ b/livres.publies/graffigny/lettres_d_une_peruvienne/build.xml
@@ -5,8 +5,7 @@
 
   <target name='books'>
     <book x='lettres_d_une_peruvienne'/>
-
-    <!--book x='lettres_d_une_peruvienne_moderne_V3'/-->
+    <book x='cenie'/>
   </target>
 
 </project>
