--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -140,6 +140,7 @@
       <ant target='@{target}' dir='gorz/ecologie_et_liberte'/>
       <ant target='@{target}' dir='gorz/miseres_du_present_richesse_du_possible'/>
       <ant target='@{target}' dir='graffigny/lettres_d_une_peruvienne'/>
+      <ant target='@{target}' dir='guattari/les_trois_ecologies'/>
       <ant target='@{target}' dir='holbach/theologie_portative'/>
       <ant target='@{target}' dir='huysmans/a_vau_l_eau'/>
       <ant target='@{target}' dir='huysmans/en_menage'/>
