000715 Dubos — So human an animal

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -108,6 +108,7 @@
       <ant target='@{target}' dir='dereme/le_laurier_du_kaiser'/>
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
       <ant target='@{target}' dir='descaves/sous-offs'/>
+      <ant target='@{target}' dir='dubos/so_human_an_animal'/>
       <ant target='@{target}' dir='duprat/histoire_de_l_imprimerie_imperiale'/>
       <ant target='@{target}' dir='dyssord/les_des_sont_jetes'/>
       <ant target='@{target}' dir='elbel/pour_une_paix_veritable'/>
