--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -116,6 +116,7 @@
       <ant target='@{target}' dir='estaunie/l_epave'/>
       <ant target='@{target}' dir='estaunie/le_ferment'/>
       <ant target='@{target}' dir='estaunie/un_simple'/>
+      <ant target='@{target}' dir='europe/europe-143'/>
       <ant target='@{target}' dir='farrere/les_civilises'/>
       <ant target='@{target}' dir='faure/l_orateur_populaire'/>
       <ant target='@{target}' dir='flaubert/madame_bovary'/>
