000717 Valéry — Regards sur le monde actuel (1945)

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -267,6 +267,7 @@
       <ant target='@{target}' dir='toulet/les_demoiselles_la_mortagne'/>
       <ant target='@{target}' dir='toulet/mon_amie_nane'/>
       <ant target='@{target}' dir='trotsky/ou_va_la_france'/>
+      <ant target='@{target}' dir='valery/regards_sur_le_monde_actuel'/>
       <ant target='@{target}' dir='varinot/un_episode_de_guerre_tragi_comique'/>
       <ant target='@{target}' dir='varlet/aux_iles_bienheureuses'/>
       <ant target='@{target}' dir='verhaeren/les_flamandes'/>
