000721 Arnould — Histoire populaire et parlementaire de la commune de Paris

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -53,6 +53,7 @@
       <ant target='@{target}' dir='apollinaire/le_poete_assassine'/>
       <ant target='@{target}' dir='arene/la_chevre_d_or'/>
       <ant target='@{target}' dir='arnauld-lancelot/grammaire_de_port_royal_1810'/>
+      <ant target='@{target}' dir='arnould/histoire_de_la_commune'/>
       <ant target='@{target}' dir='bachelin/le_serviteur'/>
       <ant target='@{target}' dir='bachelin/la_guerre_sur_le_hameau'/>
       <ant target='@{target}' dir='bachelin/le_belier_la_brebis_et_le_mouton'/>
